@@ -25,7 +25,7 @@ makemode := library
 libname = libstore
 SRCS = create.c derive.c make.c rdwr.c set.c device.c file.c stripe.c \
 	storeread.c storecat.c enc.c encode.c decode.c clone.c argp.c \
-	std.c kids.c zero.c flags.c open.c remap.c
+	std.c kids.c zero.c flags.c open.c remap.c store.c
 LCLHDRS=store.h
 installhdrs=store.h
 
