@@ -1,0 +1,2 @@
+#define STORE_EI
+#include "store.h"
